# rokid-openvoice-sdk

./: .gitignore  Android.mk  AndroidManifest.xml  CMakeLists.txt  JavaLibrary.mk  Makefile.in  README.md  android_api_example.md  autogen.sh  config  core.mk  cpp_api_example.md  ndk.mk  ndk_JavaLibrary.mk  ndk_core.mk  speech.gyp  vsys.mk
android/etc/: speech_sdk.json  tts_sdk.json
android/example/java/com/rokid/speech/example/: AsrDemo.java  SpeechDemo.java  TtsDemo.java  TtsPlayerDemo.java
android/java/com/rokid/speech/: Asr.java  AsrCallback.java  GenericConfig.java  Opus.java  OpusPlayer.java  PrepareOptions.java  Speech.java  SpeechCallback.java  SpeechOptions.java  SpeechResult.java  Tts.java  TtsCallback.java  TtsOptions.java
android/jni/: com_rokid_speech_Asr.cc  com_rokid_speech_Opus.cc  com_rokid_speech_Speech.cc  com_rokid_speech_Tts.cc  common.cc
cmake/: FindOpus.cmake  FindPoco.cmake  FindUWS.cmake  README.md  toolchain.cmake
demo/: CMakeLists.txt  asr_demo.cc  clargs.cc  clargs.h  common.h  defs.h  demo.cc  hello.pcm  nanopb_demo.cc  nlp_demo.cc  rkaudio.cc  rkaudio.h  simple_wave.cc  simple_wave.h  speech_auto_close_test.cc  speech_auto_close_test.h  speech_base_test.cc  speech_base_test.h  speech_demo.cc  speech_express_test.cc  speech_express_test.h  speech_release_test.cc  speech_release_test.h  speech_stress_test.cc  speech_stress_test.h  test_utils.cc  test_utils.h  trace_demo.cc  tts_demo.cc  tts_mem_test.cc  tts_mem_test.h
demo/res/: voice1_0.opu  voice1_1.opu  voice1_10.opu  voice1_11.opu  voice1_2.opu  voice1_3.opu  voice1_4.opu  voice1_5.opu  voice1_6.opu  voice1_7.opu  voice1_8.opu  voice1_9.opu
include/: asr.h  nlp.h  rkcodec.h  rkdec.h  speech.h  speech_common.h  speech_types.h  tts.h
nanopb/: pb.h
nanopb-gen/: auth.pb.c  auth.pb.h  speech.pb.c  speech.pb.h  speech_types.pb.c  speech_types.pb.h  tts.pb.c  tts.pb.h
proto/: CMakeLists.txt  auth.proto  speech.proto  speech_types.proto  tts.proto
src/: CMakeLists.txt
src/asr/: asr.cc  asr.h  asr_cancel_handler.cc  asr_cancel_handler.h  asr_impl.cc  asr_impl.h  asr_op_ctl.cc  asr_op_ctl.h  asr_req_handler.cc  asr_req_handler.h  asr_req_provider.cc  asr_req_provider.h  asr_resp_handler.cc  asr_resp_handler.h  asr_runner.cc  asr_runner.h  types.h
src/codec/: rkcodec.cc  rkdec.cc
src/common/: alt_chrono.cc  alt_chrono.h  callback.h  cancel_pipeline_handler.h  grpc_runner.h  log.cc  log.h  log_plugin.cc  md5.cc  nanopb_decoder.cc  nanopb_decoder.h  nanopb_encoder.cc  nanopb_encoder.h  op_ctl.h  pending_queue.h  pipeline.h  pipeline_handler.h  speech_config.cc  speech_config.h  speech_connection.cc  speech_connection.h  trace-uploader.cc  trace-uploader.h  ws_keepalive.cc  ws_keepalive.h
src/nlp/: nlp.cc  nlp.h  nlp_cancel_handler.cc  nlp_cancel_handler.h  nlp_impl.cc  nlp_impl.h  nlp_req_handler.cc  nlp_req_handler.h  nlp_req_provider.cc  nlp_req_provider.h  nlp_runner.cc  nlp_runner.h  types.h
src/speech/: core.cc  core.h  speech_cancel_handler.cc  speech_cancel_handler.h  speech_impl.cc  speech_impl.h  speech_op_ctl.cc  speech_op_ctl.h  speech_req_handler.cc  speech_req_handler.h  speech_req_provider.cc  speech_req_provider.h  speech_resp_handler.cc  speech_resp_handler.h  types.h  voice_stream_reader.cc  voice_stream_reader.h
src/tts/: tts.cc  tts.h  tts_cancel_handler.cc  tts_cancel_handler.h  tts_impl.cc  tts_impl.h  tts_op_ctl.cc  tts_op_ctl.h  tts_req_handler.cc  tts_req_handler.h  tts_req_provider.cc  tts_req_provider.h  tts_resp_handler.cc  tts_resp_handler.h  tts_runner.cc  tts_runner.h  types.h
